Updated controllers
